# Strukturblick

./: .gitignore  LICENSE  README.md  start-mockups.sh  start.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  fehler.py  main.py  registry.py
backend/app/analyzer/: __init__.py  muster.py  profil.py  schema_inferenz.py  statistik.py  validierung.py
backend/app/engines/: __init__.py  csv_engine.py  html_tabelle_engine.py  json_engine.py  md_tabelle_engine.py  ndjson_engine.py  toml_engine.py  xlsx_engine.py  xml_engine.py  yaml_engine.py
backend/app/generatoren/: __init__.py  beispieldaten.py  testdaten.py
backend/app/kern/: __init__.py  cache.py  dokument.py  erkennung.py  pfade.py  positionen.py  skelett.py
backend/app/ki/: __init__.py  adapter.py
backend/app/modelle/: __init__.py  abfrage.py  analyse.py  dokument.py  gemeinsam.py  generieren.py  ki.py  system.py  testdaten.py  transform.py
backend/app/routers/: __init__.py  abfrage.py  analyse.py  dokumente.py  generieren.py  ki.py  system.py  transform.py
backend/app/schnittstellen/: __init__.py  analyzer.py  format_engine.py
backend/app/transformer/: __init__.py  diff.py  konvertierung.py  reparatur.py
backend/strukturblick_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: test_abfrage.py  test_analyse.py  test_beispieldaten.py  test_codegen.py  test_dokumente.py  test_golden_matrix.py  test_kaputte_dokumente.py  test_ki.py  test_limits.py  test_profil.py  test_system.py  test_testdaten.py  test_transform.py  (+1 more)
(+248 files in other folders)
