[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strukturblick-backend"
description = "Backend des Strukturdaten-Assistenten Strukturblick"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "cachetools>=5.3",
    "json-source-map>=1.0",
    "pyjson5>=1.6",
    "charset-normalizer>=3.3",
    "ruamel.yaml>=0.18",
    "tomlkit>=0.13",
    "lxml>=5.2",
    "genson>=1.3",
    "jsonschema>=4.22",
    "xmlschema>=3.3",
    "jsonpath-rfc9535>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "lxml-stubs>=0.5",
    "types-jsonschema>=4.22",
]

[tool.setuptools]
packages = { find = { include = ["app*"] } }

[tool.setuptools.dynamic]
version = { attr = "app.config.APP_VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
